--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 crossbeam = "0.8.3"
 csv = "1.3.0"
+dashmap = { version = "5.5.3", features = ["rayon"] }
 jieba-rs = "0.6.8"
 pinyin = "0.10.0"
 rayon = "1.8.0"
