--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crossbeam = "0.8.3"
 csv = "1.3.0"
 dashmap = { version = "5.5.3", features = ["rayon"] }
 jieba-rs = "0.6.8"
+ltp = { version = "0.1.7", features = ["parallel", "serde_json"] }
 pinyin = "0.10.0"
 rayon = "1.8.0"
 regex = "1.10.2"
