--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossbeam = "0.8.3"
-csv = "1.3.0"
 dashmap = { version = "5.5.3", features = ["rayon"] }
 jieba-rs = "0.6.8"
-ltp = { version = "0.1.7", features = ["parallel", "serde_json"] }
-pinyin = "0.10.0"
 rayon = "1.8.0"
 regex = "1.10.2"
 serde = { version = "1.0.193"}
 serde_json = "1.0.108"
+rusqlite = { version = "0.30.0", features = ["bundled"] }
