--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 /target
 /data
 *.csv
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
+word_freq.*
