--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ rayon = "1.8.0"
 regex = "1.10.2"
 serde = { version = "1.0.193"}
 serde_json = "1.0.108"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.23.0"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
