--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ dashmap = { version = "5.5.3", features = ["rayon"] }
 jieba-rs = "0.6.8"
 rayon = "1.8.0"
 serde_json = "1.0.108"
-rusqlite = { version = "0.30.0", features = ["bundled"] }
+threadpool = "1.8.1"
