--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 dashmap = { version = "5.5.3", features = ["rayon"] }
 jieba-rs = "0.6.8"
+ltp = {version = "0.1.7",features = ["serialization"],git = "https://github.com/HIT-SCIR/ltp",branch = "main" }
 rayon = "1.8.0"
 serde_json = "1.0.108"
 threadpool = "1.8.1"
