--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+csv = "1.3.0"
 dashmap = { version = "5.5.3", features = ["rayon"] }
 jieba-rs = "0.6.8"
 rayon = "1.8.0"
+rusqlite = "0.30.0"
 serde_json = "1.0.108"
