--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ csv = "1.3.0"
 dashmap = { version = "5.5.3", features = ["rayon"] }
 jieba-rs = "0.6.8"
 rayon = "1.8.0"
-rusqlite = "0.30.0"
+rusqlite = { version = "0.30.0", features = ["modern-full"] }
 serde_json = "1.0.108"
